fixed flexbox to wrap for mobile

--- a/app/sampson/sampson.scss
+++ b/app/sampson/sampson.scss
@@ -24,6 +24,7 @@
 		margin-bottom: 1em;
 		display: flex;
 		text-align: center;
+		flex-wrap: wrap;
 		.section-header{
 			color: $light-gray;
 		}
